# ACID

./: .gitignore  .gitmodules  .readthedocs.yaml  5_residual_profiles.py  8_master_out_profiles.py  ACID.py  ACID_s1d_test.py  Forward_model.py  LICENSE  LSD_func_faster.py  NRES_ACID.fits  NRES_ACID_bervweird.fits  NRES_ACID_noberv.fits  NRES_functions.py  README.md  acid.yml  activityvals.csv  changelog.md  h_alphatest.py  multiple_frames_result.pkl  multiple_frames_result_classes.pkl  multiple_frames_result_classes_2.pkl  multiple_frames_result_classes_3.pkl  multiple_frames_result_v2_pc.pkl  multiple_orders_result.pkl  multiple_orders_result_classes_2.pkl  multiple_orders_result_classes_3.pkl  multiple_orders_result_v2_pc.pkl  pyproject.toml  quickstart_result.pkl  requirements.txt  setup.py  simple_MCMC.py  simple_MCMC_all_frames.py  syntest_ACID.py  synthetic_data.py
.other_scripts/: 5_residual_profiles.py  8_master_out_profiles.py
ACID/: ACID.py
ACID_code/: .tutorial_code.py  ACID.py  LSD_func_faster.py  easy_test.py
ACID_code.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
archive/: LSD_archive.py  mcmc_plotting_archive.py  read_in_frames.py
docs/: 0_index.rst  1_index.rst  1_installation.rst  2_installation.rst  2_using_ACID.rst  3_results_and_plotting.rst  4_multiprocessing.rst  4_other_functions.rst  5_using_the_data_class  5_using_the_data_class.rst  6_datalists.rst  7_profiles.rst  8_other_functions.rst  ACID.rst  ACID_API.rst  API.rst  conf.py  development.rst  index.rst  installation.rst  other_functions.rst  requirements.txt  tutorials.rst  (+1 more)
(+458 files in other folders)
